--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "website": {
+    "steven-king-website": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,14 +13,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/website",
+            "outputPath": "dist/steven-king-website",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/web.config"
             ],
             "styles": [
               "src/styles.css"
@@ -50,18 +51,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "website:build"
+            "browserTarget": "steven-king-website:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "website:build:production"
+              "browserTarget": "steven-king-website:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "website:build"
+            "browserTarget": "steven-king-website:build"
           }
         },
         "test": {
@@ -72,7 +73,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [],
             "assets": [
@@ -95,7 +97,7 @@
         }
       }
     },
-    "website-e2e": {
+    "steven-king-website-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,7 +105,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "website:serve"
+            "devServerTarget": "steven-king-website:serve"
           }
         },
         "lint": {
@@ -118,5 +120,7 @@
       }
     }
   },
-  "defaultProject": "website"
+  "defaultProject": "steven-king-website",
+  "schematics": {
+  }
 }
